--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@
 }
 
 .que.formulas .formulation .formulaspart {
-    display: block;
+    display: inline-block;
     margin: 0 0 1.2em 0;
     padding-bottom: 0;
 }
